--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,19 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <style>
+      #root{
+        width: 100%;
+        height: 100vh;
+        /* background-color: red; */
+    /* background-color: #031837; */
+        /* background: linear-gradient(to bottom,green 10px, grey 90px); */
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+      }
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
