--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
         height: 100vh;
         /* background-color: red; */
     /* background-color: #031837; */
-        /* background: linear-gradient(to bottom,green 10px, grey 90px); */
+        background: linear-gradient(to bottom,#031837 30%,rgba(124, 124, 229, 0.308) 10%);
         display: flex;
         justify-content: center;
         align-items: center;
