--- a/public/index.html
+++ b/public/index.html
@@ -26,9 +26,14 @@
     -->
     <title>React App</title>
     <style>
-      #root{
+      body{
         width: 100%;
         height: 100vh;
+        overflow: hidden;
+      }
+      #root{
+        width: 100%;
+        height: 100%;
         /* background-color: red; */
     /* background-color: #031837; */
         background: linear-gradient(to bottom,#031837 30%,rgba(124, 124, 229, 0.308) 10%);
