--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
     <style>
       body{
         width: 100%;
-        height: 100vh;
+        height: 100svh;
         overflow: hidden;
       }
       #root{
